Update One Piece viewer with improved UI and features

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "plyr": "^3.8.3",
+    "plyr-react": "^5.3.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4"
